--- a/Draw/Controller/Shop/CommonItemInfoView.xib
+++ b/Draw/Controller/Shop/CommonItemInfoView.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, -10}, {320, 480}}</string>
 						<reference key="NSSuperview" ref="778988017"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1004052234"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -85,7 +84,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{260, 226}</string>
 								<reference key="NSSuperview" ref="1004052234"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="816046580"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -96,7 +94,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{17, 26}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="1004052234"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="129940377"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -107,7 +104,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{14, 136.5}, {232, 1}}</string>
 								<reference key="NSSuperview" ref="1004052234"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="507763357"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -121,7 +117,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{17, 148}, {30, 17}}</string>
 								<reference key="NSSuperview" ref="1004052234"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="677537431"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -152,7 +147,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{87, 148}, {30, 17}}</string>
 								<reference key="NSSuperview" ref="1004052234"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="431090241"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -173,7 +167,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{17, 181}, {80, 30}}</string>
 								<reference key="NSSuperview" ref="1004052234"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="880289184"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -203,7 +196,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{166, 181}, {80, 30}}</string>
 								<reference key="NSSuperview" ref="1004052234"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -226,10 +218,9 @@
 							</object>
 							<object class="IBUILabel" id="677537431">
 								<reference key="NSNextResponder" ref="1004052234"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{46, 144}, {42, 21}}</string>
 								<reference key="NSSuperview" ref="1004052234"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="141685272"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -258,10 +249,9 @@
 							</object>
 							<object class="IBUILabel" id="589866758">
 								<reference key="NSNextResponder" ref="1004052234"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{17, 95}, {229, 41}}</string>
 								<reference key="NSSuperview" ref="1004052234"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="540104558"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -281,10 +271,9 @@
 							</object>
 							<object class="IBUILabel" id="129940377">
 								<reference key="NSNextResponder" ref="1004052234"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{87, 51}, {110, 21}}</string>
 								<reference key="NSSuperview" ref="1004052234"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="429536069"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -309,11 +298,9 @@
 							</object>
 							<object class="IBUILabel" id="429536069">
 								<reference key="NSNextResponder" ref="1004052234"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{122, 37}, {48, 35}}</string>
 								<reference key="NSSuperview" ref="1004052234"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -339,7 +326,6 @@
 						</array>
 						<string key="NSFrame">{{30, 111}, {260, 226}}</string>
 						<reference key="NSSuperview" ref="778988017"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="659848467"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="741457065">
@@ -351,7 +337,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="868812717"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="741457065"/>
@@ -618,87 +603,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">64</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonItemInfoView</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="backgroundImageView">UIImageView</string>
-						<string key="buyButton">UIButton</string>
-						<string key="cancelButton">UIButton</string>
-						<string key="coinCountLabel">UILabel</string>
-						<string key="coinLabel">UILabel</string>
-						<string key="contentView">UIView</string>
-						<string key="itemCountLabel">UILabel</string>
-						<string key="itemDescriptionLabel">UILabel</string>
-						<string key="itemImageView">UIImageView</string>
-						<string key="itemTitle">UILabel</string>
-						<string key="itemUnit">UILabel</string>
-						<string key="mask">UIButton</string>
-						<string key="priceLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="backgroundImageView">
-							<string key="name">backgroundImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="buyButton">
-							<string key="name">buyButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cancelButton">
-							<string key="name">cancelButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="coinCountLabel">
-							<string key="name">coinCountLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="coinLabel">
-							<string key="name">coinLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="contentView">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemCountLabel">
-							<string key="name">itemCountLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemDescriptionLabel">
-							<string key="name">itemDescriptionLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemImageView">
-							<string key="name">itemImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemTitle">
-							<string key="name">itemTitle</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemUnit">
-							<string key="name">itemUnit</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mask">
-							<string key="name">mask</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="priceLabel">
-							<string key="name">priceLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonItemInfoView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
